--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	</head>
 	<body style="max-width: 728px;margin:0 auto">
 		<div style="margin-top: 40px">
-			<img style="width:180px" src="https://cdn.jsdelivr.net/gh/wikimirror/wikimirror/300px-Wikipedia-logo.png">
+			<img style="width:180px" src="/300px-Wikipedia-logo.png">
 		</div>
 
 		{{ content }}
